--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   provider: ^4.3.2+3
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
